# postgresql-connector

./: .travis.yml  Dockerfile  README.md  Shakefile.hs  postgresql-connector.cabal  postgresql-connector.cabal.m4  stack-lts-6.yaml  stack.yaml
.build/: .shake.database
.build/meta/: build-error  format
examples/: postgresql-connector-examples.cabal  stack.yaml
examples/src/Example/: Connector.hs
src/Database/PostgreSQL/: Connector.hs
