name:                  postgresql-connector
version:               0.1.0
synopsis:              Initial project postgresql-connector from stack
description:           Please see README.md
homepage:              http://github.com/mfine/postgresql-connector
license:               BSD3
license-file:          LICENSE
author:                Mark Fine
maintainer:            Mark Fine <mark.fine@gmail.com>
copyright:             2015 Mark Fine
category:              Web
build-type:            Simple
cabal-version:         >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

executable postgresql-connector
  hs-source-dirs:      main
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , postgresql-connector
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , basic-prelude
                     , tasty
                     , tasty-hunit
                     , postgresql-connector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , basic-prelude
                     , criterion
                     , postgresql-connector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/mfine/postgresql-connector
