name:                  postgresql-connector-examples
version:               0.1.0
synopsis:              Initial project postgresql-connector-examples from stack
description:           Please see README.md
homepage:              http://github.com/mfine/postgresql-connector
license:               BSD3
license-file:          LICENSE
author:                Mark Fine
maintainer:            Mark Fine <mark.fine@gmail.com>
copyright:             2015 Mark Fine
category:              Web
build-type:            Simple
cabal-version:         >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example.Connector
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , postgresql-connector
                     , postgresql-simple
                     , resourcet
  default-language:    Haskell2010
  default-extensions:

source-repository head
  type:     git
  location: https://github.com/mfine/postgresql-connector
